[package]
name = "kkss-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7.1"
env_logger = "0.11.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
jsonwebtoken = "9.3"
bcrypt = "0.15"
config = "0.14"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json"] }
regex = "1.11"
md5 = "0.7"
rand = "0.8"
log = "0.4"
futures-util = "0.3"
utoipa = { version = "4.2", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "4.0", features = ["actix-web"] }
async-stripe = { version = "0.41.0", features = ["runtime-tokio-hyper", "checkout", "billing", "connect", "webhook-endpoints"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
